src/main/java/com/example/demo/application/global/error/handling/exceptions/ValidationException.java
package com.example.demo.application.global.error.handling.exceptions;

public class ValidationException extends RuntimeException {

}
